[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Pause Menu.gd" type="Script" id=1]
[ext_resource path="res://ostrich-regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://menufont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Sprites/background.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 1
outline_color = Color( 0.462745, 0.462745, 0.462745, 1 )
font_data = ExtResource( 2 )

[node name="Pause Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.471954
margin_bottom = -0.471954
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 300.0
margin_top = 20.0
margin_right = 553.0
margin_bottom = 460.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer"]
margin_right = 253.0
margin_bottom = 440.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
margin_left = 26.0
margin_top = 19.0
margin_right = 226.0
margin_bottom = 419.0
rect_min_size = Vector2( 200, 400 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
margin_right = 200.0
margin_bottom = 400.0
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 200.0
margin_bottom = 197.0
rect_min_size = Vector2( 0, 150 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Pause"
text = "Pause"
fit_content_height = true
scroll_active = false

[node name="Continue" type="TextureButton" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_left = 4.0
margin_top = 201.0
margin_right = 196.0
margin_bottom = 249.0
size_flags_horizontal = 4
texture_normal = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer/VBoxContainer/Continue"]
margin_left = 8.0
margin_top = 8.0
margin_right = 184.0
margin_bottom = 48.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/MarginContainer/VBoxContainer/Continue/MarginContainer"]
margin_right = 176.0
margin_bottom = 41.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Continue"
text = "Continue"
fit_content_height = true
scroll_active = false

[node name="Restart" type="TextureButton" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_left = 4.0
margin_top = 253.0
margin_right = 196.0
margin_bottom = 301.0
size_flags_horizontal = 4
texture_normal = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer/VBoxContainer/Restart"]
margin_left = 8.0
margin_top = 8.0
margin_right = 184.0
margin_bottom = 48.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/MarginContainer/VBoxContainer/Restart/MarginContainer"]
margin_right = 176.0
margin_bottom = 41.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Restart"
text = "Restart"
fit_content_height = true
scroll_active = false

[node name="Exit" type="TextureButton" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_left = 4.0
margin_top = 305.0
margin_right = 196.0
margin_bottom = 353.0
size_flags_horizontal = 4
texture_normal = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer/VBoxContainer/Exit"]
margin_left = 8.0
margin_top = 8.0
margin_right = 184.0
margin_bottom = 48.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/MarginContainer/VBoxContainer/Exit/MarginContainer"]
margin_right = 176.0
margin_bottom = 41.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Exit"
text = "Exit"
fit_content_height = true
scroll_active = false
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
